# TRA420_Modeling_2025

./: .gitignore  .pre-commit-config.yaml  Change_log.md  Electricity_OECD.xlsx  LICENSE  README.md  TODO.md  clean_cache.py  clean_outputs.py  config.yaml  environment.yaml  pyproject.toml  scenarios.yaml  to_add.txt
country_data/: Notes.md  config_Albania.yaml  config_Bosnia-Herzegovina.yaml  config_Kosovo.yaml  config_Montenegro.yaml  config_North_Macedonia.yaml  emission_factors_Albania.csv  emission_factors_Bosnia-Herzegovina.csv  emission_factors_Bosnia_Herzegowina.csv  emission_factors_Kosovo.csv  emission_factors_Montenegro.csv  emission_factors_North_Macedonia.csv  emission_factors_Serbia.csv
data/: Notes.md  emission_factors.csv  gdp_dummy.csv
docs/: README.md  air_pollution.md  air_pollution_update.md  calc_emissions.md  climate_module.md  economic_module.md  extreme_weather.md  local_climate_impacts.md  pattern_scaling.md  results_summary.md  scripts.md
resources/: energy_mix_A_emission_difference.csv  energy_mix_B_emission_difference.csv
scripts/: __init__.py  _path_setup.py  additional_plots.py  additional_plots_standalone.py  calc_emissions.py  generate_summary.py  plot_co2.py  run_air_pollution.py  run_calc_emissions.py  run_calc_emissions_all.py  run_fair_scenarios.py  run_full_pipeline.py  run_local_climate_impacts.py  run_pattern_scaling.py  run_scc.py
src/: config_paths.py
tests/: conftest.py  test_air_pollution.py  test_calc_emissions.py  test_climate_module.py  test_damage_dice.py  test_economic_module.py  test_fair_calibration.py  (+7 more)
(+102 files in other folders)
